src/objects/click_Bank_Statements_Transactions__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Statement_Account_Number__c</fullName>
        <label>Bank Statement Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Statements_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statements Sub Category</label>
        <referenceTo>click_Bank_Statements_Sub_Category__c</referenceTo>
        <relationshipLabel>Bank Statement Transactions</relationshipLabel>
        <relationshipName>Bank_Statement_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Required_Document_Id__c</fullName>
        <label>Required Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Statement_No__c</fullName>
        <label>Category Index No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Subcategory_Index__c</fullName>
        <label>Subcategory Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Transaction_No__c</fullName>
        <label>Transaction No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_Bank_Statements_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statements Account</label>
        <referenceTo>click_Bank_Statements_Account__c</referenceTo>
        <relationshipLabel>Bank Statement Transactions</relationshipLabel>
        <relationshipName>Bank_Statement_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>click_amount__c</fullName>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_balance__c</fullName>
        <label>Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_text__c</fullName>
        <label>Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>click_transactionCount__c</fullName>
        <label>Transaction Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateObj__c</fullName>
        <label>DateObj</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Statements Transactions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank_Statement_Account_Number__c</columns>
        <columns>click_Bank_Statements_Account__c</columns>
        <columns>Bank_Statements_Sub_Category__c</columns>
        <columns>click_balance__c</columns>
        <columns>Click_Required_Document_Id__c</columns>
        <columns>Click_Subcategory_Index__c</columns>
        <columns>click_transactionCount__c</columns>
        <columns>Click_Transaction_No__c</columns>
        <columns>click_type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Statements Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Statement Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>